# calibration_toolkit

./: .gitignore  CMakeLists.txt  README-Jiaming's MacBook Pro.md  README.md
config/: test_config_1.xml
docs/: integration_plan.md
include/: BoardDetector.h  BoardSpec.h  CalibrationEngine.h  DetectionPreviewWidget.h  DetectionResult.h  HeatmapGenerator.h  HeatmapView.h  ImageEvaluationDialog.h  ImageLoader.h  Logger.h  MainWindow.h  PaperFigureExporter.h  ParameterDialog.h  Pose3DView.h  ProjectBootstrapDialog.h  ProjectHistory.h  ProjectSession.h  ResidualScatterView.h
include/camera/: CameraWindow.h  FeaturePanel.h  ImageView.h  StatusDashboard.h  Utils.h  VimbaController.h
include/camera/focus/: FocusAssistWindow.h  FocusEvaluator.h  FocusSummaryPanel.h
resources/: palettes.qss
resources/icons/: app_icon.icns
src/: BoardDetector.cpp  CalibrationEngine.cpp  DetectionPreviewWidget.cpp  HeatmapGenerator.cpp  HeatmapView.cpp  ImageEvaluationDialog.cpp  ImageLoader.cpp  Logger.cpp  MainWindow.cpp  PaperFigureExporter.cpp  ParameterDialog.cpp  Pose3DView.cpp  ProjectBootstrapDialog.cpp  ProjectHistory.cpp  ProjectSession.cpp  ResidualScatterView.cpp  main.cpp  my_calib.rc  resources.qrc
src/camera/: CameraWindow.cpp  FeaturePanel.cpp  ImageView.cpp  StatusDashboard.cpp  Utils.cpp  VimbaController.cpp
src/camera/focus/: FocusAssistWindow.cpp  FocusEvaluator.cpp  FocusSummaryPanel.cpp
tools/: deploy_windows_runtime.ps1  package_macos.sh  package_windows-Jiaming's MacBook Pro.ps1  package_windows.ps1
